# navno_finetune

./: .gitignore  .pre-commit-config.yaml  README.md  _quarto.yml  index.ipynb  index.qmd  justfile  matryoshka.ipynb  oss.qmd  pyproject.toml  tpu.qmd
.github/workflows/: ci.yml  publish.yaml
