[project]
name = "navno-finetune"
version = "0.1.0"
description = "Finjustering av språkmodeller på Nav.no"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.3.2",
    "google-cloud-bigquery>=3.29.0",
    "polars[pyarrow]>=1.23.0",
    "quarto-cli>=1.6.42",
    "rich>=13.9.4",
    "sentence-transformers[train]>=3.4.1",
    "transformers[torch]>=4.49.0",
]

[dependency-groups]
dev = [
    "nbstripout>=0.8.1",
    "pre-commit>=4.1.0",
    "ruff>=0.9.9",
]
